src/driver/ajinextek/AXL(Library)/Delphi/AXC.pas


    // 카운터 모듈의 위치 주기 모드 트리거 기능의 범위, 위치 주기를 설정을 한번에 확인한다.
    function AxcTriggerGetBlock (lChannelNo : LongInt; dpLower : PDouble; dpUpper : PDouble; dpABSod : PDouble) : DWord; stdcall;

    // 카운터 모듈의 트리거 출력 펄스 폭을 설정한다.
    // 단위 : uSec
    function AxcTriggerSetTime (lChannelNo : LongInt; dTrigTime : Double) : DWord; stdcall;

    // 카운터 모듈의 트리거 출력 펄스 폭 설정을 확인한다.
    function AxcTriggerGetTime (lChannelNo : LongInt; dpTrigTime : PDouble) : DWord; stdcall;

    // 카운터 모듈의 트리거 출력 펄스의 출력 레벨을 설정한다.
    // dwLevel -->  0x00 : 트리거 출력시 'Low' 레벨 출력.
    // dwLevel -->  0x01 : 트리거 출력시 'High' 레벨 출력.
    function AxcTriggerSetLevel (lChannelNo : LongInt; dwLevel : DWord) : DWord; stdcall;
    // 카운터 모듈의 트리거 출력 펄스의 출력 레벨 설정을 확인한다.
    function AxcTriggerGetLevel (lChannelNo : LongInt; dwpLevel : PDWord) : DWord; stdcall;

    // 카운터 모듈의 주파수 트리거 출력 기능에 필요한 주파수를 설정한다.
    // 단위 : Hz, 범위 : 1Hz ~ 500 kHz
    function AxcTriggerSetFreq (lChannelNo : LongInt; dwFreqency : DWord) : DWord; stdcall;
    // 카운터 모듈의 주파수 트리거 출력 기능에 필요한 주파수를 설정을 확인한다.
    function AxcTriggerGetFreq (lChannelNo : LongInt; dwpFreqency : PDWord) : DWord; stdcall;

    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 설정한다.
    // dwOutput 범위 : 0x00 ~ 0x0F, 각 채널당 4개의 범용 출력
    function AxcSignalWriteOutput (lChannelNo : LongInt; dwOutput : DWord) : DWord; stdcall;

    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 확인한다.
    function AxcSignalReadOutput (lChannelNo : LongInt; dwpOutput : PDWord) : DWord; stdcall;

    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 비트 별로 설정한다.
    // lBitNo 범위 : 0 ~ 3, 각 채널당 4개의 범용 출력
    function AxcSignalWriteOutputBit (lChannelNo : LongInt; lBitNo : LongInt; uOnOff : DWord) : DWord; stdcall;
    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 비트 별로 확인 한다.
    // lBitNo 범위 : 0 ~ 3
    function AxcSignalReadOutputBit (lChannelNo : LongInt; lBitNo : LongInt; upOnOff : PDWord) : DWord; stdcall;

    // 카운터 모듈의 지정 채널에 대한 범용 입력 값을 확인한다.
    function AxcSignalReadInput (lChannelNo : LongInt; dwpInput : PDWord) : DWord; stdcall;

    // 카운터 모듈의 지정 채널에 대한 범용 입력 값을 비트 별로 확인 한다.
    // lBitNo 범위 : 0 ~ 3
    function AxcSignalReadInputBit (lChannelNo : LongInt; lBitNo : LongInt; upOnOff : PDWord) : DWord; stdcall;

    // 카운터 모듈의 트리거 출력을 활성화 한다.
    // 현재 설정된 기능에 따라 트리거 출력이 최종적으로 출력할 것인지 설정한다.
    function AxcTriggerSetEnable (lChannelNo : LongInt; dwUsage : DWord) : DWord; stdcall;

    // 카운터 모듈의 트리거 출력 활설화 설정 내용을 확인하다.
    function AxcTriggerGetEnable (lChannelNo : LongInt; dwpUsage : PDWord) : DWord; stdcall;

    // 카운터 모듈의 절대위치 트리거 기능을 위해 설정된 RAM 내용을 확인한다.
    // dwAddr 범위 : 0x0000 ~ 0x1FFFF;
    function AxcTriggerReadAbsRamData (lChannelNo : LongInt; dwAddr : DWord; dwpData : PDWord) : DWord; stdcall;

    // 카운터 모듈의 절대위치 트리거 기능을 위해 필요한 RAM 내용을 설정한다.
    // dwAddr 범위 : 0x0000 ~ 0x1FFFF;
    function AxcTriggerWriteAbsRamData (lChannelNo : LongInt; dwAddr : DWord; dwData : DWord) : DWord; stdcall;

    // 지정 CNT 채널의 절대 위치 트리거 기능을 위한 DWORD형 위치 정보를 설정한다.
    //----------------------------------------------------------------------------------------------------------------------------------
    // 1. AXT_SIO_CN2CH인 경우
    // dwTrigNum --> 131072(=0x20000) 개까지 설정 가능
    // dwTrigPos --> DWORD형 Data 입력 가능
    // dwDirection --> 0x0(default) : dwTrigPos[0], dwTrigPos[1] ..., dwTrigPos[dwTrigNum - 1] 순으로 Data를 Write 한다.
    //     0x1    : dwTrigPos[dwTrigNum - 1], dwTrigPos[dwTrigNum - 2], ..., dwTrigPos[0] 순으로 Data를 Write 한다.
    // *참고* 1) dwDirection: Data Write 순서만 다를 뿐 기능상의 차이 없음
    //    2) AXC Manual의 AxcTriggerSetAbs - Description을 참고하여 data를 가공 후 사용해야 함
    //----------------------------------------------------------------------------------------------------------------------------------
    // 2. AXT_SIO_HPC4인 경우
    // dwTrigNum --> 500 개까지 설정 가능
    // dwTrigPos --> DWORD형 Data 입력 가능
    // dwDirection --> 0x0(default) : 사용되지 않는 변수로, 입력하지 않아도 된다.
    //----------------------------------------------------------------------------------------------------------------------------------
    // 3. AXT_SIO_RCNT2RTEX, AXT_SIO_RCNT2MLIII, AXT_SIO_RCNT2SIIIH, AXT_SIO_RCNT2SIIIH_R인 경우
    // dwTrigNum --> 0x200(=512) 개까지 설정 가능
    // dwTrigPos --> DWORD형 data 입력 가능
    // dwDirection --> 0x0(default) : 사용되지 않는 변수로, 입력하지 않아도 된다.
    //----------------------------------------------------------------------------------------------------------------------------------
    function AxcTriggerSetAbs (lChannelNo : LongInt; dwTrigNum : DWord; dwTrigPos : PDWord; 0 : DWORD dwDirection =) : DWord; stdcall;


    // 지정 CNT 채널의 절대 위치 트리거 기능을 위한 double형 위치 정보를 설정한다.
    //----------------------------------------------------------------------------------------------------------------------------------
    // 1. AXT_SIO_CN2CH인 경우
    // dwTrigNum --> 4194304(=0x20000*32) 개까지 설정 가능
    // dTrigPos  --> double형 data 입력 가능
    // dwDirection --> 0x0(default) : dTrigPos[0], dTrigPos[1] ..., dTrigPos[dwTrigNum - 1] 순으로 Data를 Write 한다.
    //     0x1    : dTrigPos[dwTrigNum - 1], dTrigPos[dwTrigNum - 2], ..., dTrigPos[0] 순으로 Data를 Write 한다.
    // *참고* 1) dwDirection: Data Write 순서만 다를 뿐 기능상의 차이 없음
    //----------------------------------------------------------------------------------------------------------------------------------
    // 2. AXT_SIO_RCNT2RTEX, AXT_SIO_RCNT2MLIII, AXT_SIO_RCNT2SIIIH_R인 경우
    // dwTrigNum --> 0x200(=512) 개까지 설정 가능
    // dTrigPos  --> double형 data 입력 가능
    // dwDirection --> 0x0(default) : 사용되지 않는 변수로, 입력하지 않아도 된다.
    //----------------------------------------------------------------------------------------------------------------------------------
    function AxcTriggerSetAbsDouble (lChannelNo : LongInt; dwTrigNum : DWord; dTrigPos : PDouble; 0 : DWORD dwDirection =) : DWord; stdcall;

    ////////////////// LCM4_10_Version/////////////////////////////////////////////////////////////

    // 카운터 모듈의 PWM 출력을 활성화한다.
    function AxcTriggerSetPwmEnable (lChannelNo : LongInt; bEnable : Boolean) : DWord; stdcall;
    // 카운터 모듈의 PWM 출력 활성화 상태를 확인한다.
    function AxcTriggerGetPwmEnable (lChannelNo : LongInt; bEnable : bool*) : DWord; stdcall;
    // 카운터 모듈의 PWM 출력모드를 설정한다.
    // dwMode : PWM 출력모드
    // [0] : Manual (Manual로 설정된 PWM Data)
    // [1] : Auto (속도 Table)
    function AxcTriggerSetPwmOutMode (lChannelNo : LongInt; dwMode : DWord) : DWord; stdcall;
    // 카운터 모듈의 PWM 출력모드를 확인한다.
    // dwMode : PWM 출력모드
    // [0] : Manual (Manual로 설정된 PWM Data)
    // [1] : Auto (속도 Table)
    function AxcTriggerGetPwmOutMode (lChannelNo : LongInt; dwpMode : PDWord) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 속도 정보를 설정한다.
    // dMinVel : dMinVel
    // dMaxVel : dMaxVel
    // dVelInterval : 속도 테이블에서의 구간별 속도 Interval
    // ※주의 : dMinVel부터 dVelInterval 간격으로 최대 5000개의 속두구간이 나뉜다.
    //          (((dMaxVel-dMinVel) / dVelInterval) <= 5000)이 만족하여야 한다.
    function AxcTriggerSetPwmVelInfo (lChannelNo : LongInt; dMinVel : Double; dMaxVel : Double; dVelInterval : Double) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 속도 정보를 확인한다.
    function AxcTriggerGetPwmVelInfo (lChannelNo : LongInt; dpMinVel : PDouble; dpMaxVel : PDouble; dpVelInterval : PDouble) : DWord; stdcall;
    // 카운터 모듈의 PWM 출력에서 Pulse 폭 제어방식을 설정한다.
    // dwMode : Pulse 폭 제어
    // [0] : DutyRatio
    // [1] : PulseWidth
    function AxcTriggerSetPwmPulseControl (lChannelNo : LongInt; dwMode : DWord) : DWord; stdcall;
    //  카운터 모듈의 PWM 출력에서 Pulse 조절방식을 확인다.
    // dwpMode : Pulse 폭 제어
    // [0] : DutyRatio
    // [1] : PulseWidth
    function AxcTriggerGetPwmPulseControl (lChannelNo : LongInt; dwpMode : PDWord) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 설정한다.
    // pwm 출력모드가 Manual 인 경우에만 유효하다
    // dFrequency :  (0.017 ~ 1M) 까지 설정이 가능하다. (Hz 단위)
    // dData : Pulse 폭 관련 Data 를 입력하며 Pulse Control 방식에 따라 Data 형식이 다르다.
    // Pulse 폭 제어방식이 DutyRatio인 경우 DutyRatio
    // Pulse 폭 제어방식이 PulseWidth 인 경우 PulseWidth (us단위)
    function AxcTriggerSetPwmManualData (lChannelNo : LongInt; dFrequency : Double; dData : Double) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 확인한다.
    function AxcTriggerGetPwmManualData (lChannelNo : LongInt; dpFrequency : PDouble; dpData : PDouble) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 설정한다.
    // lDataCnt : 설정 할 트리거 정보의 전체 개수
    // dpVel : dpVel[0],dpVel[1]....dpVel[DataCnt -1] 순서로 입력 가능
    // dwpFrequency : dwpFrequency[0],dwpFrequency[1]....dwpFrequency[DataCnt-1] 순서로 입력 가능(0.017 ~ 1M) 까지 설정이 가능하다.
    // dData : Pulse 폭 관련 Data 를 입력하며 Pulse Control 방식에 따라 Data 형식이 다르다.
    // Pulse 폭 제어방식이 DutyRatio인 경우 DutyRatio
    // Pulse 폭 제어방식이 PulseWidth 인 경우 PulseWidth (us단위)
    // ※주의 :
    //    1) dpVel, dwpFrequency, dwpDutyRatio 의 배열 개수를 주의하여 사용해야한다.
    //  - 속도가 0인 구간에서는 PWM 출력이 불가하다.
    //    3) PWM Enable 상태에서는 사용할 수 없다.
    function AxcTriggerSetPwmPatternData (lChannelNo : LongInt; lDataCnt : LongInt; dpVel : PDouble; dpFrequency : PDouble; dpData : PDouble) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 설정한다.
    function AxcTriggerSetPwmData (lChannelNo : LongInt; dVel : Double; dFrequency : Double; dData : Double) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 정보를 확인한다.
    function AxcTriggerGetPwmData (lChannelNo : LongInt; dVel : Double; dpFrequency : PDouble; dpData : PDouble) : DWord; stdcall;
    // 카운터 모듈의 속도 값을 확인 합니다.
    function AxcStatusReadActVel (lChannelNo : LongInt; dpActVel : PDouble) : DWord; stdcall;
    // 카운터 모듈의 2D 속도 값을 확인 합니다.
    function AxcStatusRead2DActVel (lChannelNo : LongInt; dpActVel : PDouble) : DWord; stdcall;
    // 카운터 모듈의 Position 값을 초기화 한다.
    function AxcStatusSetActPosClear (lChannelNo : LongInt) : DWord; stdcall;
    ////////////////// HPC4_30_Version
    // 카운터 모듈의 각 테이블에 할당된 트리거 출력의 레벨을 설정한다.
    // uLevel : 트리거 출력 신호의 Active Level
    //   [0]  : 트리거 출력시 'Low' 레벨 출력.
    //   [1]  : 트리거 출력시 'High' 레벨 출력.
    function AxcTableSetTriggerLevel (lModuleNo : LongInt; lTablePos : LongInt; uLevel : DWord) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 지정된 트리거 출력의 레벨 설정값을 확인한다.
    function AxcTableGetTriggerLevel (lModuleNo : LongInt; lTablePos : LongInt; upLevel : PDWord) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 할당된 트리거 출력의 펄스 폭을 설정한다.
    // dTriggerTimeUSec : [Default 500ms], us단위로 지정
    function AxcTableSetTriggerTime (lModuleNo : LongInt; lTablePos : LongInt; dTriggerTimeUSec : Double) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 지정된 트리거 출력의 펄스 폭 설정값을 확인한다.
    function AxcTableGetTriggerTime (lModuleNo : LongInt; lTablePos : LongInt; dpTriggerTimeUSec : PDouble) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 할당 할 2개의 엔코더 입력 신호를 설정한다.
    // uEncoderInput1 [0-3]: 카운터 모듈에 입력되는 4개의 엔코더 신호중 하나
    // uEncoderInput2 [0-3]: 카운터 모듈에 입력되는 4개의 엔코더 신호중 하나
    function AxcTableSetEncoderInput (lModuleNo : LongInt; lTablePos : LongInt; uEncoderInput1 : DWord; uEncoderInput2 : DWord) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 할당 된 2개의 엔코더 입력 신호를 확인한다.
    function AxcTableGetEncoderInput (lModuleNo : LongInt; lTablePos : LongInt; upEncoderInput1 : PDWord; upEncoderInput2 : PDWord) : DWord; stdcall;

    // 카운터 모듈의 각 테이블에 할당 할 트리거 출력 포트를 설정한다.
    // uTriggerOutport [0x0-0xF]: Bit0: 트리거 출력 0, Bit1: 트리거 출력 1, Bit2: 트리거 출력 2, Bit3: 트리거 출력 3
    // Ex) 0x3(3)   : 출력 0, 1에 트리거 신호를 출력하는 경우
    //     0xF(255) : 출력 0, 1, 2, 3에 트리거 신호를 출력하는 경우
    function AxcTableSetTriggerOutport (lModuleNo : LongInt; lTablePos : LongInt; uTriggerOutport : DWord) : DWord; stdcall;
    // 카운터 모듈의 각 테이블에 할당 된 트리거 출력 포트를 확인한다.
    function AxcTableGetTriggerOutport (lModuleNo : LongInt; lTablePos : LongInt; upTriggerOutport : PDWord) : DWord; stdcall;
